# uvicorn-gunicorn-poetry

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  build.py  manage-build.py  publish.py  pyproject.toml
.github/workflows/: pipeline.yml  publish-images.yml  test.yml
docker/: Dockerfile
docker-image/: Dockerfile  Dockerfile.3.8.12-slim-bullseye  python3.8-alpine3.14.dockerfile  python3.8.12-slim-bullseye.dockerfile
docker-image/application/: main.py
docker-image/gunicorn/: gunicorn_configuration.py  start_gunicorn.sh
examples/fast_api_multistage_build/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
examples/fast_api_multistage_build/app/: main.py
examples/fast_api_multistage_build/tests/: conftest.py
examples/fast_api_multistage_build/tests/test_api/: test_api_endpoints.py  test_items.py  test_root.py
examples/fast_api_singlestage_build/: .dockerignore  Dockerfile  README.md  pyproject.toml
tests/: conftest.py  constants.py  utils.py
tests/build_image/: conftest.py  test_build_version.py  test_default_configuration.py
tests/build_image/build_versions/: test_example_app_versions.py
tests/build_versions/: test_example_app_versions.py
tests/configuration/: test_configuration.py  test_default_configuration.py  test_development_configuration.py  test_poetry_configuration.py
tests/functionality/: test_running_test_executables.py  test_worker_reload.py
tests/publish_image/: conftest.py  test_cli.py  test_env.py
