[tool.poetry]
name = "uvicorn-gunicorn-poetry"
version = "1.3.0"
description = "Gunicorn with Uvicorn workers for running web applications. Uses Poetry for managing dependencies and setting up a virtual environment."
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
python-dotenv = "0.21.0"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-cov = "4.0.0"
coverage = "6.5.0"
docker = "6.0.1"
requests = "2.28.1"
black = "22.10.0"
pre-commit = "2.20.0"
semver = "2.13.0"
pylint = "2.15.5"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
addopts = "--ignore=tests/functionality/test_worker_reload.py"
testpaths = [
    "tests",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 80
target-version = ['py39']

[tool.pylint.main]
errors-only = true
recursive = "y"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
