[tool.poetry]
name = "uvicorn-gunicorn-poetry"
version = "2.2.0"
description = "Gunicorn with Uvicorn workers for running web applications. Uses Poetry for managing dependencies and setting up a virtual environment."
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
click = "8.1.7"
docker = "7.0.0"
python-on-whales = "0.70.1"

[tool.poetry.dev-dependencies]
black = "24.4.0"
bcrypt = "4.1.2"
coverage = "7.4.4"
docker-image-py = "0.1.12"
pytest = "8.1.1"
pytest-cov = "5.0.0"
pytest-dotenv = "0.5.2"
pylint = "2.16.2"
pre-commit = "3.7.0"
requests = "2.28.2"
semver = "2.13.0"
testcontainers = "4.4.0"


# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
addopts = "--ignore=tests/functionality/test_worker_reload.py"
testpaths = [
    "tests",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 80
target-version = ['py39']

[tool.pylint.main]
errors-only = true
recursive = "y"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
