[tool.poetry]
name = "fast_api_multistage_build"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "20.1.0"
uvicorn = "0.15.0"
fastapi = "0.68.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "3.0.0"
pytest-flake8 = "1.0.7"
coverage = "6.1.1"
# There is a problem using version flake8 v4.0.1 in conjunction with the
# latest version of pytest-flake8
flake8 = "3.9.2"
requests = "2.25.1"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
